@startuml

interface  ColumnValueExtractor <<interface>> {
+ {abstract} extractColumnValue(document, arrayAllIterationState): ValueExpression
}

abstract class AbstractPropertyToColumnValueExtractor <<abstract>>{
+ extractColumnValue(document, arrayAllIterationState): ValueExpression
# {abstract} mapValue(documentValue): ValueExpression
}

class IterationIndexColumnValueExtractor{
+ extractColumnValue(document, arrayAllIterationState): ValueExpression
}

class ToStringPropertyToColumnMapping{
#mapValue(documentValue): ValueExpression
}

class "..." as more{
}


ColumnValueExtractor <|.. AbstractPropertyToColumnValueExtractor
ColumnValueExtractor <|.. IterationIndexColumnValueExtractor
AbstractPropertyToColumnValueExtractor <|-- ToStringPropertyToColumnMapping
AbstractPropertyToColumnValueExtractor <|-- more
@enduml
